fix: DAFU 장애물리스트 오류 수정, RASS 빌드 타임 자동 생성 수정

--- a/sample_code/RiskAssessment/CMakeLists.txt
+++ b/sample_code/RiskAssessment/CMakeLists.txt
@@ -61,6 +61,11 @@ option(sa "Build with sa SDK" OFF)
 option(orin "Build with orin SDK" OFF)
 option(nats "Enable NATS integration" OFF)
 
+#Build Time
+string(TIMESTAMP BUILD_TIMESTAMP "%Y-%m-%d %H:%M:%S")
+
+add_definitions(-DBUILD_TIMESTAMP="${BUILD_TIMESTAMP}")
+
 if (nats)
     message(STATUS "NATS is enabled")
     add_definitions(-DNATS)
