RASS work info 수신부분 추가

--- a/sample_code/RiskAssessment/CMakeLists.txt
+++ b/sample_code/RiskAssessment/CMakeLists.txt
@@ -215,6 +215,7 @@ set(APPLICATION_src
     ${COMMON_DIR}/logger/src/logger.cpp
     ${COMMON_DIR}/service/src/risk_assessment_provider.cpp
     ${COMMON_DIR}/service/src/build_path_subscriber.cpp
+    ${COMMON_DIR}/service/src/work_information_subscriber.cpp
     ${COMMON_DIR}/service/src/map_data_subscriber.cpp
 )
 
