--- a/sample_code/RiskAssessment/config.ini
+++ b/sample_code/RiskAssessment/config.ini
@@ -1,4 +1,11 @@
 [Network]
 NATSServerAddress = nats.beyless.com
 ServerPort = 4222
-UseNats = true
+UseNats = false
+
+[ScenarioLogging]
+ScenarioLog = false
+
+[label]
+LabelWrite = true
+LabelOutputPath = /opt/log/auto_labels.csv
