시나리오 7/8 활성화
시나리오 7/8 수정

--- a/sample_code/RiskAssessment/config.ini
+++ b/sample_code/RiskAssessment/config.ini
@@ -2,9 +2,7 @@
 NATSServerAddress = nats.beyless.com
 ServerPort = 4222
 UseNats = false
-
-[ScenarioLogging]
-ScenarioLog = false
+ScenarioLog = true
 
 [label]
 LabelWrite = true
